--- a/src/Sections/Returns/Index/ReturnsIndex.module.css
+++ b/src/Sections/Returns/Index/ReturnsIndex.module.css
@@ -2,6 +2,6 @@
     display: flex;
     flex-direction: row;
     gap: 1rem;
-    width: 100%;
+    flex: 1 1 0rem;
     height: 100%;
 }
