--- a/src/Sections/Returns/Returns.module.css
+++ b/src/Sections/Returns/Returns.module.css
@@ -1,6 +1,6 @@
 .container{
     display: flex;
     flex-direction: row;
-    width: 100%;
+    flex: 1 1 0rem;
     height: 100%;
 }
