--- a/src/components/UI/Main.module.css
+++ b/src/components/UI/Main.module.css
@@ -1,8 +1,7 @@
 .container{
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
+    flex: 1 1 0rem;
 }
 
 .globalnav{
